--- a/main.scss
+++ b/main.scss
@@ -3,8 +3,27 @@
     box-sizing: border-box;
 }
 
+body {
+    text-align: center;
+}
+
+nav {
+    padding: 1em;
+    background-color: #eee;
+    text-align: center;
+}
+
+button {
+    display: block;
+    margin: 0 auto;
+    width: 100px;
+    background-color: black;
+    color: white;
+}
+
 div#output {
     margin: 2em auto;
+    margin-bottom: 0;
     width: 100px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -13,4 +32,9 @@ div#output {
         border: 1px solid black;
         text-align: center;
     }
+}
+
+p {
+    margin-top: 1em;
+    padding: 0 1em;
 }
